2024-10-01T01:15:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11116805423 # 435
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-01
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 176 242 / 178 244
* notice: next accum: outdated-unq outdated-all / unq all: 177 243 / 178 244
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-17] / []

2024-09-30T01:11:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11097588932 # 434
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-30
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 175 241 / 178 244
* notice: next accum: outdated-unq outdated-all / unq all: 176 242 / 178 244
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-15] / []

2024-09-29T01:14:14Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11088470444 # 433
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-29
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 172 238 / 178 244
* notice: next accum: outdated-unq outdated-all / unq all: 175 241 / 178 244
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-14] / []

2024-09-19T01:06:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932589525 # 423